# PhyNetPy

./: .gitignore  INSTALLATION_GUIDE.md  LICENSE  NWtree.nw  README.md  pyproject.toml  setup.cfg  setup.py
.cursor/rules/: phynetpy.mdc
1.1/: Infer_MP_Allop.py  MCMC_BiMarkers.py  MCMC_BiMarkers_CUDA.py  MCMC_GT.py  Merge.py  MetropolisHastings.py  ModelFactory.py  ModelGraph.py  ModelMove.py  NJ.py  OptimizedNetwork.py  README_CUDA_KERNELS.md  Simulations.py  State.py  phylonet_demo.nex  project_demo.py  restructure_gene_data.py
ABC/: abc_demo.py  abc_tree.py  ete3test.py  growtree.py  pps.py  rate_v_stat.py
Bayesian/: d5_startnet.nex  mdc_tester.nex
NexusFiles/: 5_MPAllop.nex  5_MPAllop_species.nex  727_mpallop.nex  J_nex_n1.nex  J_pruned_v3.newick  J_trees(7).nex  J_trees_n1.newick  external_5.nex  external_727.nex  network_A_test.nex  test_trees.newick
src/: BiMarkers.py  BiMarkers_temp.py  D10.nex  Executor.py  GTR.py  J_100.nex  J_pruned.newick  J_pruned.nex  J_pruned_v2.nex  J_pruned_v3.nex  Logger.py  MCMC_BiMarkers_CUDA.py  MCMC_BiMarkers_v2.py  MSA.py  MetropolisHastings.py  ModelBuilder.py  ModelFactory.py  ModelFactory2.py  ModelGraph.py  ModelGraph2.py  ModelMove.py  Network.py  NetworkParser.py  Newick.py  Phylo.py  PhyloNet.py  State.py  Strategy.py  Traversal.py  Validation.py  Visitor.py  __init__.py  bubble_J.nex  bubble_J_sad.nex  dataInput.py  felsenstein.py  graph_core_cy.pyx  network_cy.c  paper_net.nex  paper_net_2.nex  (+5 more)
src/ABC/: NWtree.nw  abc_tree.py  growtree.py  tree_test.py
src/Bayesian/: F10.nex  Graph.py  MetropolisHastings.py  ModelGraph.py  NetworkBuilder.py  SNPModule.py  SNPTransition.py  State.py  Tools.py  mp_allop_start_net.nex
src/FinalModuleList/: Biology.py  DataStructures.py  DevTools.py  IO.py  Network.py  Simulations.py  test_suite.py
src/Graphs/: Graph.py  UndirectedGraph.py
src/MCMC/: MCMC.py  MCMC_Bimarkers.py  MCMC_GT.py  MCMC_Seq.py
src/PhyNetPy/: Alphabet.py  BirthDeath.py  CoalesceHeuristic.py  Commands.command  GTR.py  GTR2.py  GeneTrees.py  Graph.py  GraphUtils.py  Infer_MP_Allop.py  Inference.py  Logger.py  MCMC_BiMarkers.py  MPSugar.py  MSA.py  Matrix.py  MetropolisHastings.py  ModelFactory.py  ModelGraph.py  ModelMove.py  ModelTemplate.py  Move.py  NJ.py  Network.py  NetworkAdapter.py  NetworkMoves.py  NetworkParser.py  Newick.py  Node.py  PhyAllop.py  PhySNP.py  PhyloNet.py  ScoringStrategy.py  SequenceSim.py  Simulator.py  State.py  VALIDATION_GUIDE.md  Validation.py  __init__.py  assumptions.txt  (+23 more)
src/Unused/: bimarkers2.py  helpers.py
src/Utils/: Counter.py  ForwardReverseMap.py  SetDifference.py
src/docs/: Alphabet.html  GTR.html  GeneTrees.html  GraphUtils.html  MSA.html  NetworkMoves.html  NetworkParser.html  Newick.html  PhyloNet.html
src/io/: fileIO.py  testfile.nex  testfile2.nex  testfile3.nex
src/lib/: test.py
src/test/: MCMCSnappTest.py  TestDriver.py  sampleOut.txt  testNex.nexus
src2/: J_pruned_v2.newick  J_trees.newick
src2/Bayesian/: zhi_gene_trees.nex
src2/PhyNetPy/: Alphabet.py  GTR.py  GraphUtils.py  MSA.py  ModelFactory.py  ModelGraph.py  (+3 more)
unready_tests/: test_mcmcsnp.py
(+31341 files in other folders)
