[metadata]
name = PhyloPy
version = 0.0.1
author = Luay Nakhleh
author_email = nakhleh@rice.edu
description = PhyloPy is a tool designed mainly for analyzing, reconstructing, and evaluating reticulate (or non-treelike) evolutionary relationships, generally known as phylogenetic networks. Various methods that we have developed make use of techniques and tools from the domain of phylogenetic trees, and hence the PhyloPy package includes several tools for phylogenetic tree analysis.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NakhlehLab/PhyloPy
project_urls =
    Bug Tracker = https://github.com/NakhlehLab/PhyloPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src