[metadata]
name = PhyNetPy
version = 0.1.0
author = Luay Nakhleh
author_email = nakhleh@rice.edu
description = PhyNetPy is a library to provide not only methods, but a framework for the analysis, inference, simulation, and visualization of phylogenetic networks and trees
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/NakhlehLab/PhyNetPy
project_urls =
    Bug Tracker = https://github.com/NakhlehLab/PhyNetPy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    numpy >= 1.23.5
    biopython >= 1.8
    elfi >= 0.8.4
    ete3 >= 3.1.2
    matplotlib
    newick
    python-nexus >= 2.9.0
    scipy >=1.9.3
    pulp 
    clr-loader

python_requires = >=3.8

[options.extras_require]
test =
    pytest
    pytest-cov

[options.packages.find]
where = src